2017-11-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amflush.pm: Use new --no-dump argument of driver
	* server-src/driver.c: Merge nodump and --no-dump argument

2017-11-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Fix when no storage

2017-11-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amdump.pl: Fix usage message

2017-11-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-taper-vault.pl:Increase diskname length
	  to 130 character

2017-11-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Add all disks to the disklist hash, Add only
	  disk that must be dumped to the dump_disk hash
	* perl/Amanda/Report/human.pm: Do not report 'MISSING RESULT' If the
	  disk is not in the dump_disk hash
	* installcheck/Amanda_Report.pl: Setup a valid config

2017-11-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amdump.pl, server-src/driver.c
	  server-src/planner.c: Add --no-dump, --no-flush and --no-vault
	  argument
	* perl/Amanda/Amdump.pm: Add no_dump, no_flush and no_vault parameters
	* man/xml-source/amdump.8.xml: Document new arguments

2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* perl/Amanda/CheckDump.pm: Fix report of image validated

2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (untaint_fgets): Fix

2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Recovery_Clerk.pl,
	  installcheck/Amanda_Taper_Scribe.pl, perl/Amanda/CheckDump.pm,
	  perl/Amanda/Chunker/Controller.pm, perl/Amanda/Chunker/Scribe.pm,
	  perl/Amanda/FetchDump.pm, perl/Amanda/Recovery/Clerk.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Service/Amidxtaped.pm,
	  perl/Amanda/Service/Restore.pm, perl/Amanda/Taper/Scribe.pm,
	  perl/Amanda/Taper/Worker.pm, perl/Amanda/Vault.pm,